arkts_static_test/02_LexicalElements/ets_cases/2.9.7_Multiline_String_Literal/compile-pass/LEX_02_09_07_002_PASS_NEWLINE.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id LEX_02_09_07_002_PASS_NEWLINE
 * @expect compile-pass
 * @section 2.9.7
 * @design 包含换行符
 * @note compile-pass 用例：验证多行字符串中的换行符
 */

// 包含换行符
let s1 = `Line 1
Line 2
Line 3`
